--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,5 +2,12 @@ spring:
   datasource:
     username: root
     password: root
-    url: jdbc:mysql://localhost:3306/test?useUnicode=true&characterEncoding=utf-8&useSSL=true&serverTimezone=UTC
+    url: jdbc:mysql://localhost:3306/multi_demo?useUnicode=true&characterEncoding=utf-8&useSSL=true&serverTimezone=UTC
     driver-class-name: com.mysql.cj.jdbc.Driver
+
+  activiti:
+    database-schema-update: true
+    db-history-used: true
+    history-level: full
+    check-process-definition: false
+    deployment-mode: never-fail
