--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,11 @@
             <artifactId>poi-tl</artifactId>
             <version>1.12.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-expression</artifactId>
+            <version>5.3.18</version>
+        </dependency>
     </dependencies>
 
     <build>
